// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "pip-services.grpc.commandable";
option java_outer_classname = "CommandableProto";
option objc_class_prefix = "GRPC_CMD";
option go_package = "./protos";

package commandable;

message ErrorDescription {
  string category = 1;
  string code = 2;
  string trace_id = 3;
  int32 status = 4;
  string message = 5;
  string cause = 6;
  string stack_trace = 7;
  map<string, string> details = 8;
}

// The commandable service definition.
service Commandable {
  rpc invoke (InvokeRequest) returns (InvokeReply) {}
}

// The request message containing the invocation request.
message InvokeRequest {
  string method = 1;
  string trace_id = 2;
  bool args_empty = 3;
  string args_json = 4;
}

// The response message containing the invocation response
message InvokeReply {
  ErrorDescription error = 1;
  bool result_empty = 2;
  string result_json = 3;
}
